--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Push Docker images to Docker Hub
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
   multiple-registries:
