Build: remove AWS from deploy targets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   build-and-push-image:
     uses: exercism/github-actions/.github/workflows/docker-build-push-image.yml@main
+    with:
+      aws_ecr: false
     secrets:
       AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
       AWS_REGION: ${{secrets.AWS_REGION}}
