--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # 2.4.0
+    - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
 
     - name: Build Image
       run: docker build -t "exercism/nim-docker-base:${NIM_VERSION}" .
