--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,11 @@ updates:
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
-      interval: monthly
+      interval: 'monthly'
 
   # Enable updates to the dependencies of our Dockerfile
   - package-ecosystem: docker
     directory: '/'
     schedule:
-      interval: daily
+      interval: 'monthly'
       time: '05:00'
